# medical_multimodal_rag_ai

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AUDIT_REPORT.md  CLEANUP_REMOVED.txt  CLEANUP_REMOVED_RUN2.txt  CLEANUP_REMOVED_RUN3.txt  PROJECT_TREE_CLEAN.txt  README.md  SMOKE_TEST_REPORT.md  example_chatbot_usage.py  pyproject.toml  pytest.ini  requirements.runtime.txt  requirements.txt  test_chatbot.py
app/: streamlit_app.py
app/pages/: medical_chatbot.py
data/: download_datasets.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/app/: routes.tsx
frontend/src/app/components/layout/: DashboardLayout.tsx
frontend/src/app/components/ui/: ConfidenceBar.tsx  PipelineProgress.tsx  StatusBadge.tsx
frontend/src/app/context/: AppContext.tsx
frontend/src/app/pages/: ChatbotPage.tsx  FinalReport.tsx  KnowledgeEvidence.tsx  MultimodalAnalysis.tsx  OcrReview.tsx  VisionExplainability.tsx
frontend/src/app/services/: api.ts  mockData.ts
frontend/src/app/types/: index.ts
frontend/src/imports/pasted_text/: multimodal-medical-ai-app.tsx
frontend/src/styles/: fonts.css  theme.css
notebooks/: evaluate_pipeline.py  train_vision_model.py
scripts/: cleanup_repo.py  generate_project_tree.py  jenkins-setup.sh
src/: __init__.py  config.py
src/api/: chat_api.py  main.py
src/chat/: __init__.py  chatbot.py
src/db/: __init__.py  mongo.py
src/embeddings/: embedding_model.py
src/explainability/: __init__.py  calibration.py  grad_cam.py  shap_analysis.py
src/labs/: __init__.py  interpretation.py
src/ocr/: extract_lab_text.py
src/pipeline/: __init__.py  multimodal_pipeline.py
src/preprocessing/: text_cleaning.py
src/rag/: chunking.py  hybrid_retriever.py  knowledge_ingest.py  knowledge_ingestion.py  multimodal_reasoning.py  rag_pipeline.py
src/vector_db/: faiss_store.py
src/vision/: grad_cam.py  medical_models.py  xray_analysis.py
tests/: conftest.py  test_chatbot_json.py  test_lab_interpretation.py  test_ocr_io.py  test_pipeline.py
